<resources>
    <string name="app_name">Kupac</string>
    <string name="app_label">Pronadji majstora</string>
    <string name="navigation_drawer_open">Pregled dodatnih opcija</string>
    <string name="navigation_drawer_close">Zatvori dodatne opcije</string>
    <string name="ok">OK</string>
    <string name="yes">Da</string>
    <string name="back">Nazad</string>
    <string name="change">Izmeni</string>
    <string name="register_button_text">Registracija</string>
    <string name="login_button_text">Prijava</string>
    <string name="guest_button_text">Nastavi kao gost</string>
    <string name="first_name_label">Ime:</string>
    <string name="first_name_hint">unesite ime</string>
    <string name="last_name_label">Prezime:</string>
    <string name="last_name_hint">unesite prezime</string>
    <string name="address_label">Adresa:</string>
    <string name="address_hint">unesite adresu</string>
    <string name="phone_number_label">Telefon:</string>
    <string name="phone_number_hint">unesite broj telefona</string>
    <string name="username_label">Korisnicko ime:</string>
    <string name="username_hint">unesite korisnicko ime</string>
    <string name="password_label">Lozinka:</string>
    <string name="password_hint">unesite lozinku</string>
    <string name="old_password_hint">unesite staru lozinku</string>
    <string name="new_password_hint">unesite novu lozinku</string>
    <string name="new_password_label">Nova lozinka:</string>
    <string name="remember_user_label">Ostani prijavljen</string>
    <string name="dialog_loading_title">Sacekajte</string>
    <string name="wait_for_login">Prijava je u toku…</string>
    <string name="wait_for_register">Registracija je u toku…</string>
    <string name="wait_for_edit_user_data">Izmena licnih podataka je u toku…</string>
    <string name="wait_for_search">Pretraga majstora je u toku…</string>
    <string name="wait_for_all_scores">Dohvatanje ocena je u toku…</string>
    <string name="wait_for_all_comments">Dohvatanje komentara je u toku…</string>
    <string name="wait_for_send_request">Slanje zahteva je u toku…</string>
    <string name="wait_for_get_requests">Dohvatanje zahteva je u toku…</string>ng>
    <string name="wait_for_pay">Placanje je u toku…</string>
    <string name="wait_for_send_rate">Slanje ocene je u toku…</string>
    <string name="wait_for_send_comment">Slanje komentara je u toku…</string>
    <string name="login_error_message">Doslo je do greske prilikom prijave. Pokusajte ponovo.</string>
    <string name="registration_error_message">Doslo je do greske prilikom registracije. Pokusajte ponovo.</string>
    <string name="edit_user_data_error_message">Doslo je do greske prilikom izmene licnih podataka. Pokusajte ponovo.</string>
    <string name="search_error_message">Doslo je do greske prilikom pretrage. Pokusajte ponovo.</string>
    <string name="send_request_error_message">Doslo je do greske prilikom slanja zahteva. Pokusajte ponovo.</string>
    <string name="get_requests_error_message">Doslo je do greske prilikom dohvatanja zahteva. Pokusajte ponovo.</string>
    <string name="pay_error_message">Doslo je do greske prilikom placanja. Pokusajte ponovo.</string>
    <string name="send_rate_error_message">Doslo je do greske prilikom slanja ocene. Pokusajte ponovo.</string>
    <string name="send_comment_error_message">Doslo je do greske prilikom slanja komentara. Pokusajte ponovo.</string>
    <string name="registration_succ_title">Registracija</string>
    <string name="registration_succ_message">Registracija je uspesna!</string>
    <string name="edit_user_data_succ_title">Izmena podataka</string>
    <string name="edit_user_data_succ_message">Uspesno ste izmenili podatke!</string>
    <string name="edit_password_succ_title">Promena lozinke</string>
    <string name="edit_password_succ_message">Uspesno ste promenili lozinku!</string>
    <string name="job_label">Posao:</string>
    <string name="price_label">Cena:</string>
    <string name="currency_label">din</string>
    <string name="date_begin_label">Datum pocetka:</string>
    <string name="date_end_label">Datum kraja:</string>
    <string name="experience_label">Iskustvo:</string>
    <string name="years_label">god.</string>
    <string name="rating_label">Ocena:</string>
    <string name="special_technique_label">Specijalne tehnike</string>
    <string name="special_technique_label2">Specijalne tehnike:</string>
    <string name="urgency_label">Hitnost</string>
    <string name="search_label">Pretraga</string>
    <string name="navigation_view_register">Registruj se</string>
    <string name="navigation_view_sign_in">Prijavi se</string>
    <string name="navigation_view_change_user_data">Izmeni licne podatke</string>
    <string name="navigation_view_change_password">Promeni lozinku</string>
    <string name="navigation_view_sign_out">Odjavi se</string>
    <string name="navigation_view_active_requests">Pregled aktivnih zahteva</string>
    <string name="navigation_view_finished_requests">Pregled zavrsenih zahteva</string>
    <string name="logout_dialog_title">Odjavi se</string>
    <string name="logout_dialog_messsage">Da li ste sigurni da zelite da se odjavite?</string>
    <string name="change_password_error_message_1">Morate popuniti sva polja!</string>
    <string name="change_password_error_message_2">Nove lozinke se ne poklapaju!</string>
    <string name="change_password_error_message_3">Doslo je do greske prilikom promene lozinke. Pokusajte ponovo.</string>
    <string name="search_result_title">Rezultati pretrage:</string>
    <string name="search_result_empty_title">Ne postoje majstori koji zadovoljavaju kriterijume pretrage!</string>
    <string name="active_requests_empty_title">Ne postoje aktivni zahtevi!</string>
    <string name="finished_requests_empty_title">Ne postoje zavrseni zahtevi!</string>
    <string name="rating_search_item">Ocena: %1$s</string>
    <string name="see_all_scores">POGLEDAJ OCENE</string>
    <string name="see_all_comments">POGLEDAJ KOMENTARE</string>
    <string name="create_request">Kreiraj zahtev za dolazak</string>
    <string name="create_request_guest_message">Morate biti prijavljeni da biste kreirali zahtev!</string>
    <string name="menu_share">Podeli</string>
    <string name="get_all_scores_error_message">Doslo je do greske prilikom dohvatanja svih ocena. Pokusajte ponovo.</string>
    <string name="get_all_comments_error_message">Doslo je do greske prilikom dohvatanja svih komentara. Pokusajte ponovo.</string>
    <string name="scores_title">Ocene:</string>
    <string name="scores_empty_title">Ne postoje ocene za ovog majstora!</string>
    <string name="comments_title">Komentari:</string>
    <string name="comments_empty_title">Ne postoje komentari za ovog majstora!</string>
    <string name="create_request_title">Vase licne informacije ce ovom prilikom biti poslate majstoru.</string>
    <string name="payment_method">Nacin placanja:</string>
    <string name="send_request">Posalji zahtev</string>
    <string name="create_request_fill_data_error">Morate uneti sve podatke!</string>
    <string name="send_request_dialog_title">Slanje zahteva</string>
    <string name="send_request_dialog_message">Zahtev je uspesno poslat!</string>
    <string name="active_requests_title">Aktivni zahtevi:</string>
    <string name="date_begin_active_request_item">Datum pocetka: %1$s</string>
    <string name="finished_requests_title">Zavrseni zahtevi:</string>
    <string name="pay">Plati</string>
    <string name="working_period">Period radova:</string>
    <string name="pay_dialog_title">Placanje</string>
    <string name="pay_dialog_messsage">Da li ste sigurni da zelite da izvrsite placanje?</string>
    <string name="pay_successful_title">Placanje</string>
    <string name="pay_successful_message">Placanje je uspesno obavljeno</string>
    <string name="pay_not_possible_message">Nije moguce obaviti placanje.</string>
    <string name="display_jobs">Prikazi:</string>
    <string name="rate">Oceni</string>
    <string name="comment">Ostavi komentar</string>
    <string name="send_rate">Posalji ocenu</string>
    <string name="sent_rate_title">Unesite ocenu od 1.0 do 5.0:</string>
    <string name="send_rate_dialog_title">Ocenjivanje</string>
    <string name="send_rate_dialog_message">Da li ste sigurni da zelite da posaljete ocenu?</string>
    <string name="send_rate_successful_title">Ocenjivanje</string>
    <string name="send_rate_successful_message">Slanje ocene je uspesno!</string>
    <string name="send_comment">Posalji komentar</string>
    <string name="sent_comment_title">Unesite komentar:</string>
    <string name="send_comment_dialog_title">Komentarisanje</string>
    <string name="send_comment_dialog_message">Da li ste sigurni da zelite da posaljete komentar?</string>
    <string name="send_comment_successful_title">Komentarisanje</string>
    <string name="send_comment_successful_message">Slanje komentaa je uspesno!</string>
</resources>
