<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_guest"
        android:checkableBehavior="none">
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_account_plus_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_register" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_sign_in" />
    </group>

    <group
        android:id="@+id/menu_user_info"
        android:checkableBehavior="none">
        <item
            android:id="@+id/change_user_info"
            android:icon="@drawable/ic_account_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_change_user_data" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_account_key_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_change_password" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_sign_out" />
    </group>

    <group
        android:id="@+id/menu_user_activities"
        android:checkableBehavior="none">
        <item
            android:id="@+id/active_requests"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_active_requests" />
        <item
            android:id="@+id/finished_requests"
            android:icon="@drawable/ic_briefcase_check_black_24dp"
            android:checked="false"
            android:title="@string/navigation_view_finished_requests" />
    </group>

</menu>
