<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/first_name_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Petar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/last_name_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Petrovic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/job_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/job"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="moler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/address_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Takovska 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/phone_number_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="0641234567" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/price_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="1200 din" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/rating_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="4.56" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/experience_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="7 god." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/special_technique_label2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/special_techniques"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:lines="4"
                    android:maxLines="4"
                    android:padding="5dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:text="gletovanje, krecenje, farbanje" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/view_all_scores"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/see_all_scores"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/view_all_comments"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/see_all_comments"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/create_request"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/create_request"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>
