<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/register"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:textSize="18sp"
            android:text="@string/register_button_text" />

        <Button
            android:id="@+id/login"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:textSize="18sp"
            android:text="@string/login_button_text" />

        <TextView
            android:id="@+id/guest"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_button_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="end" />

    </LinearLayout>

</RelativeLayout>